# analise-obras-df

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
analise_obras_df/: analise.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-extracao_e_analise.ipynb  workflow.md
reports/: 1.0-extracao_e_analise.html
