[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analise_obras_df"
version = "0.0.1"
description = "Projeto destinado propor uma an\u00e1lise acerca dos projetos de investimentos no Distrito Federal"
authors = [
  { name = "026625 (Unb)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["analise_obras_df"]
include = ["pyproject.toml", "analise_obras_df/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["analise_obras_df"]
force-sort-within-sections = true

